--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,9 @@
 <nav class="navbar navbar-dark bg-dark">
     <a href="/" class="navbar-brand">Blog</a>
+
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class = "nav-link" href="/admin/categories">Categorias</a>
+        </li>
+    </ul>
 </nav>
