--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,22 @@
 <%- include ('partials/header.ejs') %>
-<%- include ('partials/navbar.ejs') %>
+<%- include ('partials/homenavbar.ejs') %>
 <body>
-    <h1>Blog</h1>
+    <hr>
+    <div class="container">
+        <% articles.forEach(article => { %>
+            <div class="card">
+                <div class="card-header">
+                     <h2><%= article.title %></h2>
+                     <a href="#" class="btn btn-success"  role="button">Ler artigo</a>
+                </div>
+
+                <div class="card-body">
+
+                </div>
+
+            </div>
+            <br>
+        <% }) %>
+    </div>
 </body>
 <%- include ('partials/footer.ejs') %>
