--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <div class="card">
                 <div class="card-header">
                      <h2><%= article.title %></h2>
-                     <a href="#" class="btn btn-success"  role="button">Ler artigo</a>
+                     <a href="<%=article.slug %>" class="btn btn-success"  role="button">Ler artigo</a>
                 </div>
 
                 <div class="card-body">
