--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -2,8 +2,11 @@
     <a href="/" class="navbar-brand">Blog</a>
 
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class = "nav-link" href="/">Home</a>
-        </li>
+        <% categories.forEach(category =>{ %>
+            <li class="nav-item">
+                <a class = "nav-link" href="/category/<%=category.slug %>"><%=category.title %></a>
+                <% console.log(category.slug) %>
+            </li> 
+        <% }) %> 
     </ul>
 </nav>
