--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,14 @@
             </div>
             <br>
         <% }) %>
+
+        <div class="row">
+            <hr>
+            <div class="col col-12">
+                <a style="float:right" href="/articles/page/2">Próximo</a>
+            </div>
+        </div>
     </div>
+    <hr>
 </body>
 <%- include ('partials/footer.ejs') %>
